resources/webidl2/test/invalid/baseline/frozenarray-empty.txt
Syntax error at line 1:
typedef FrozenArray<> empty;
                    ^ Missing FrozenArray subtype
